# zoho-mail-sync

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  renovate.json  zoho-mail-sync.example.toml
.github/workflows/: ci.yml  release.yml  update-deps.yml
src/: config.rs  maildir.rs  main.rs  oauth.rs  state.rs  sync.rs
src/zoho/: folders.rs  messages.rs  mod.rs
