[package]
name = "zoho-mail-sync"
version = "0.1.0"
edition = "2024"
description = "One-way Maildir mirror of a Zoho Mail account"
license = "MIT"
repository = "https://github.com/vijayvar/zoho-mail-sync"
readme = "README.md"
keywords = ["zoho", "mail", "maildir", "sync", "cli"]
categories = ["command-line-utilities", "email"]

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
governor = "0.10"
indicatif = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time", "signal"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
maildir = "0.6.4"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
