[package]
name = "zoho-mail-sync"
version = "0.1.0"
edition = "2024"
description = "One-way Maildir mirror of a Zoho Mail account"
license = "MIT"
repository = "https://github.com/vijayvar/zoho-mail-sync"
readme = "README.md"
keywords = ["zoho", "mail", "maildir", "sync", "cli"]
categories = ["command-line-utilities", "email"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
governor = "0.10"
indicatif = "0.18"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "gzip", "form", "charset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
maildir = "0.6.4"
rand = "0.10"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
